Fixed Wacky-Go-Crazy Hompage (again)
Prevented the entire homepage from going off screen to the right

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -24,7 +24,6 @@ body
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 
-	width: 100%;
 	height: 100%;
 	max-height: 100%
 
